fix(thumbnail): adjust wide images to fill instead of squish

--- a/core/src/components/thumbnail/thumbnail.scss
+++ b/core/src/components/thumbnail/thumbnail.scss
@@ -11,4 +11,6 @@ ion-thumbnail {
 ion-thumbnail img {
   width: 100%;
   height: 100%;
+
+  object-fit: cover;
 }
